polish: Tree Gnome Village (#2246)
* refactor: modernize

also add combat gear to general requirement, and food to general recommended

* fix: start quest "Yes." dialog highlight

* montai directions

* refactor: and() instead of new Conditions(LogicType.AND)

* refactor: gameval

* nit: north-west/south-west instead of northwest/southwest

* nit: more flavour text & direction

* add first orb as a requirement to elkoy skip step

* add dialog highlight to elkoy skip step

* fix: dupe message in overlay

* nit: reword orb of protection step

* nit: update name of warlord

* elkoy skip when returning the last time

* fix: add item reward

* refactor: final polish pass

* chore: license